Added newsletter logic to convert relative urls to absolute, convert computed styles to inline and copy result to clipboard

--- a/templates/content/node--newsletter.html.twig
+++ b/templates/content/node--newsletter.html.twig
@@ -93,3 +93,6 @@ view_mode ? 'node--view-mode-' ~ view_mode|clean_class,
 		</div>
 	</div>
 </article>
+<button></button>
+<script src="https://unpkg.com/computed-style-to-inline-style"></script>
+
