--- a/templates/block/block--inline-block--content-grid.html.twig
+++ b/templates/block/block--inline-block--content-grid.html.twig
@@ -38,7 +38,7 @@
 	<div{{attributes.addClass(classes)}}>
 		{{ title_prefix }}
 		{% if label %}
-			<h2{{title_attributes}} style="color: black;">{{ label }}</h2>
+			<h2{{title_attributes}}>{{ label }}</h2>
 		{% endif %}
 		{{ title_suffix }}
 		{# Column Grid Layout #}
