--- a/templates/block/block--inline-block--slider.html.twig
+++ b/templates/block/block--inline-block--slider.html.twig
@@ -41,7 +41,7 @@
 	<div{{attributes.addClass(classes).addClass(size)}}>
 		{{ title_prefix }}
 		{% if label %}
-			<h2{{title_attributes}} style="color: black;">{{ label }}</h2>
+			<h2{{title_attributes}}>{{ label }}</h2>
 		{% endif %}
 		{{ title_suffix }}
 		{# <h1> {{ dump(content['#block_content'].field_slider_slide.value) }} </h1> #}
