--- a/templates/block/block--inline-block--text-block.html.twig
+++ b/templates/block/block--inline-block--text-block.html.twig
@@ -17,17 +17,17 @@
     'block-' ~ plugin_id|clean_class,
     bundle ? 'block--type-' ~ bundle|clean_class,
     view_mode ? 'block--view-mode-' ~ view_mode|clean_class,
-    'card'
+    ''
   ]
 %}
 
 
 {% block content %}
 	<div{{attributes.addClass(classes)}}>
-		<div class="card-body container">
+		<div class="container">
 			{{ title_prefix }}
 			{% if label %}
-				<h2{{title_attributes}} style="color: black;">{{ label }}</h2>
+				<h2{{title_attributes}}>{{ label }}</h2>
 			{% endif %}
 			{{ title_suffix }}
 			{{ content }}
