--- a/templates/block/block--inline-block--video-reveal.html.twig
+++ b/templates/block/block--inline-block--video-reveal.html.twig
@@ -27,7 +27,7 @@
 	<div{{attributes.addClass(classes)}}>
 		{{ title_prefix }}
 		{% if label %}
-			<h2{{title_attributes}} style="color: black;">{{ label }}</h2>
+			<h2{{title_attributes}}>{{ label }}</h2>
 		{% endif %}
 		{{ title_suffix }}
 		<div id="ucb-video-block-{{ myId }}" class="ucb-video-text-div">
