zebra stripe finished, article content field added

--- a/css/ucb-article.css
+++ b/css/ucb-article.css
@@ -111,6 +111,7 @@ i.fas.fa-circle {
 .ucb-article-blockquote-text {
 	font-weight: bold;
 }
-.zebraPageStyle:nth-child(odd) {
+.zebraPageStyle .accentStyle:nth-child(odd) {
   background-color:#EEEEEE;
+  margin: 0 calc(50% - 50vw)
 }
