--- a/templates/content/node--ucb-article.html.twig
+++ b/templates/content/node--ucb-article.html.twig
@@ -9,16 +9,7 @@
 {{ attach_library('boulderD9_base/ucb-page') }}
 {{ attach_library('boulderD9_base/ucb-article') }}
 {{ attach_library('boulderD9_base/ucb-related-articles') }}
-
-{%
-set classes = [
-'node',
-'node--type-' ~ node.bundle|clean_class,
-not node.isPublished() ? 'node--unpublished',
-view_mode ? 'node--view-mode-' ~ view_mode|clean_class,
-]
-%}
-
+{# Added class to article class 'pageStyleCSS' to control page style #}
 
 {% set pageStyleInt = content.field_ucb_article_style|render|striptags|trim %}
 {% set pageStyleCSS = "" %}
@@ -29,6 +20,17 @@ view_mode ? 'node--view-mode-' ~ view_mode|clean_class,
 {% elseif pageStyleInt =="Zebra Striped"%}
 	{% set pageStyleCSS = "zebraPageStyle" %}
 {% endif %}
+
+{%
+set classes = [
+'node',
+'node--type-' ~ node.bundle|clean_class,
+not node.isPublished() ? 'node--unpublished',
+view_mode ? 'node--view-mode-' ~ view_mode|clean_class,
+pageStyleCSS
+]
+%}
+
 
 
 {% set social_share_button_position = drupal_config('ucb2021_base.settings', 'ucb_social_share_position')%}
@@ -67,7 +69,7 @@ view_mode ? 'node--view-mode-' ~ view_mode|clean_class,
 
 {% if not content.field_ucb_article_external_url|render %}
 	<article{{attributes.addClass(classes)}}>
-		<div class="container ucb-article {{pageStyleCSS}}" itemscope itemtype="https://schema.org/Article">
+		<div class="container ucb-article" itemscope itemtype="https://schema.org/Article">
 			<header role="banner" class="ucb-article-banner">
 				<h1 class="ucb-article-heading">{{ label }}</h1>
 			</header>
