--- a/templates/content/node--basic-page.html.twig
+++ b/templates/content/node--basic-page.html.twig
@@ -76,8 +76,7 @@
 {%
     set classes = [
         'node',
-        'ucb-basic-page',
-        'container-fluid'
+        'ucb-basic-page'
     ]
 %}
 
