--- a/css/ucb-article.css
+++ b/css/ucb-article.css
@@ -73,7 +73,7 @@ i.fas.fa-circle {
   flex-direction: row;
   align-items: center;
   text-align: left;
-  margin: 1em 1em 1em 0;
+  margin: 0 20px 0 0;
   padding: 20px;
 }
 
@@ -111,7 +111,8 @@ i.fas.fa-circle {
 .ucb-article-blockquote-text {
 	font-weight: bold;
 }
-.zebraPageStyle .accentStyle:nth-child(odd) {
-  background-color:#EEEEEE;
-  margin: 0 calc(50% - 50vw)
+.zebraPageStyle .accentStyle:nth-child(even) {
+	background-color:#EEEEEE;
+	padding-top: 20px;
+	margin-bottom: 20px;
 }
