--- a/templates/content/node--newsletter.html.twig
+++ b/templates/content/node--newsletter.html.twig
@@ -36,10 +36,10 @@ view_mode ? 'node--view-mode-' ~ view_mode|clean_class,
 
 		{# Newsletter Intro #}
 		{% if content.field_newsletter_intro_image|render %}
-			{{ content.field_newsletter_intro_image }}
+			<div id="newsletter-intro-img">{{ content.field_newsletter_intro_image }}</div>
 		{% endif %}
 		{% if content.field_newsletter_intro_body|render %}
-			{{ content.field_newsletter_intro_body }}
+			<div id="newsletter-intro-body">{{ content.field_newsletter_intro_body }}</div>
 		{% endif %}
 
 		{# Newsletter Sections Content #}
@@ -100,6 +100,68 @@ view_mode ? 'node--view-mode-' ~ view_mode|clean_class,
 		</div>
 	</div>
 </article>
-<button></button>
-<script src="https://unpkg.com/computed-style-to-inline-style"></script>
 
+{# TO DO -- MAKE A TABLE #}
+<div class="container" id="email-preview" style="background-color: grey">
+
+
+	{# TO DO -- MAKE A TABLE #}
+	<div id="email" style="width:600px;margin: auto;background:white;">		
+		<!-- Header --> 
+		<table role="presentation" border="0" width="100%" cellspacing="0">
+		<tr>
+			<h1 id="newsletter-email-title" style="padding: 30px 30px 15px 60px;font-size: 52px; margin:0 0 20px 0; font-family:Roboto, Helvetica Neue, Helvetica, Arial, sans-serif;"> Header</h1>
+		  <td align="center" style="color: white;">
+			<img id="newsletter-email-intro-img" src="" width="100%">
+		  </tr>
+		  {% if content.field_newsletter_intro_body|render %}
+		  <tr>
+			<td align='left' style="padding:35px 30px 15px 60px">{{ content.field_newsletter_intro_body.0 }}</td>
+		  </tr>
+	  {% endif %}
+			</td>
+		</table>
+		
+		<div id="email-newsletter-article-section"></div>
+		<!-- Articles --> 
+ 
+<!-- Promo-->
+	  <table role="presentation" border="0" width="100%" cellspacing="0">
+		<tr>
+		  <td align="center" style="color: white;">
+				<a id="promo-link-1"href="">
+					<img id="promo-img-1" src="http://localhost:53250/sites/default/files/2022-09/philipp-pilz-iQRKBNKyRpo-unsplash_1.jpg" width="100%">
+				</a>
+		  </td>
+		  </tr>
+	  </table>
+
+	  <!-- Blocks-->
+	  <table role="presentation" border="0" width="100%" cellspacing="0">
+		<tr>
+			<td style="vertical-align: top;
+	padding: 15px 15px 30px 60px;"> 
+			  <h2 id="block-title-1"style="font-size: 28px; margin:0 0 20px 0; font-family:Roboto, Helvetica Neue, Helvetica, Arial, sans-serif;"> Vivamus ac elit eget </h2>
+			  <p id="block-body-1"style="margin:0 0 12px 0;font-size:16px;line-height:24px;font-family:Roboto, Helvetica Neue, Helvetica, Arial, sans-serif;">Vivamus ac elit eget dolor placerat tristique et vulputate nibh. Sed in elementum nisl, quis mollis enim. Etiam gravida dui vel est euismod, at aliquam ipsum euismod.</p>
+			  </td>
+
+		  <td style="vertical-align: top;
+	padding: 15px 30px 30px 60px;">
+		   <h2 id="block-title-2" style="font-size: 28px; margin:0 0 20px 0; font-family:Roboto, Helvetica Neue, Helvetica, Arial, sans-serif;">Suspendisse tincidunt</h2>
+			  <p id="block-body-2" style="margin:0 0 12px 0;font-size:16px;line-height:24px;font-family:Roboto, Helvetica Neue, Helvetica, Arial, sans-serif;">Suspendisse tincidunt iaculis fringilla. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras laoreet elit purus, quis pulvinar.</p>
+			  </td>
+			  </tr>  
+  </table>
+<!--Promo 2-->
+  <table role="presentation" border="0" width="100%" cellspacing="0">
+	<tr>
+	  <td align="center" style="color: white;">
+			<a id="promo-link-2"href="">
+				<img id="promo-img-2" alt="Flower" src="http://localhost:53250/sites/default/files/2022-09/philipp-pilz-iQRKBNKyRpo-unsplash_1.jpg" width="100%">
+			</a>
+	  </td>
+	  </tr>
+  </table>
+
+	  </div>
+</div>
