--- a/templates/field/field--field_ucb_article_content.html.twig
+++ b/templates/field/field--field_ucb_article_content.html.twig
@@ -1,7 +1,7 @@
 {# Need to break out of bootstrap and then get back in
 nonsense breaks out, container returns to bootstrap#}
 {% for item in items %}
-	<div class="accentStyle">
+	<div class="ucb-striped-content">
 		<div class="container">
 			{{ item.content }}
 		</div>
