Basic css changes for blocks on sections
Basic css changes for blocks on sections to fix colors and layouts

--- a/css/block/events-calendar.css
+++ b/css/block/events-calendar.css
@@ -1,6 +1,8 @@
 .ucb-events-calendar {
   max-height: 600px;
   overflow: auto;
+  background: white;
+  color: black;
 }
 
 .ucb-events-calendar .localist_minicalendar_events {
