--- a/css/block/content-grid.css
+++ b/css/block/content-grid.css
@@ -56,6 +56,8 @@
   box-shadow: 0 0 10px rgb(0, 0, 0, 10%);
   transition: box-shadow 0.5s ease, background-color 0.5s ease, color 0.5s ease;
   margin-bottom: 1.5em;
+  background: white;
+  color: black;
 }
 
 .grid-card:hover {
