wip: promo images, blocks rendering

--- a/templates/content/node--newsletter.html.twig
+++ b/templates/content/node--newsletter.html.twig
@@ -104,8 +104,6 @@ view_mode ? 'node--view-mode-' ~ view_mode|clean_class,
 {# TO DO -- MAKE A TABLE #}
 <div class="container" id="email-preview" style="background-color: grey">
 
-
-	{# TO DO -- MAKE A TABLE #}
 	<div id="email" style="width:600px;margin: auto;background:white;">		
 		<!-- Header --> 
 		<table role="presentation" border="0" width="100%" cellspacing="0">
@@ -125,43 +123,12 @@ view_mode ? 'node--view-mode-' ~ view_mode|clean_class,
 		<div id="email-newsletter-article-section"></div>
 		<!-- Articles --> 
  
-<!-- Promo-->
-	  <table role="presentation" border="0" width="100%" cellspacing="0">
-		<tr>
-		  <td align="center" style="color: white;">
-				<a id="promo-link-1"href="">
-					<img id="promo-img-1" src="http://localhost:53250/sites/default/files/2022-09/philipp-pilz-iQRKBNKyRpo-unsplash_1.jpg" width="100%">
-				</a>
-		  </td>
-		  </tr>
-	  </table>
+		<div id="email-newsletter-promo-one-section"></div>
 
 	  <!-- Blocks-->
-	  <table role="presentation" border="0" width="100%" cellspacing="0">
-		<tr>
-			<td style="vertical-align: top;
-	padding: 15px 15px 30px 60px;"> 
-			  <h2 id="block-title-1"style="font-size: 28px; margin:0 0 20px 0; font-family:Roboto, Helvetica Neue, Helvetica, Arial, sans-serif;"> Vivamus ac elit eget </h2>
-			  <p id="block-body-1"style="margin:0 0 12px 0;font-size:16px;line-height:24px;font-family:Roboto, Helvetica Neue, Helvetica, Arial, sans-serif;">Vivamus ac elit eget dolor placerat tristique et vulputate nibh. Sed in elementum nisl, quis mollis enim. Etiam gravida dui vel est euismod, at aliquam ipsum euismod.</p>
-			  </td>
-
-		  <td style="vertical-align: top;
-	padding: 15px 30px 30px 60px;">
-		   <h2 id="block-title-2" style="font-size: 28px; margin:0 0 20px 0; font-family:Roboto, Helvetica Neue, Helvetica, Arial, sans-serif;">Suspendisse tincidunt</h2>
-			  <p id="block-body-2" style="margin:0 0 12px 0;font-size:16px;line-height:24px;font-family:Roboto, Helvetica Neue, Helvetica, Arial, sans-serif;">Suspendisse tincidunt iaculis fringilla. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras laoreet elit purus, quis pulvinar.</p>
-			  </td>
-			  </tr>  
-  </table>
+	  <div id="email-newsletter-blocks-section"></div>
 <!--Promo 2-->
-  <table role="presentation" border="0" width="100%" cellspacing="0">
-	<tr>
-	  <td align="center" style="color: white;">
-			<a id="promo-link-2"href="">
-				<img id="promo-img-2" alt="Flower" src="http://localhost:53250/sites/default/files/2022-09/philipp-pilz-iQRKBNKyRpo-unsplash_1.jpg" width="100%">
-			</a>
-	  </td>
-	  </tr>
-  </table>
+	  <div id="email-newsletter-promo-two-section"></div>
 
 	  </div>
 </div>
