--- a/css/ucb-bootstrap-layouts.css
+++ b/css/ucb-bootstrap-layouts.css
@@ -2,6 +2,8 @@
   Styles for the layout builder bootstrap layouts
 */
 
+/*** ADMIN CONFIGURATION BAR STYLES ***/
+
 .js-form-item-layout-settings-background-background-color .form-radio:checked,
 .js-form-item-layout-settings-layout-column-width .form-radio:checked,
 .js-form-item-layout-settings-layout-container-width .form-radio:checked,
@@ -13,6 +15,12 @@
 .js-form-item-layout-settings-layout-container-width .form-radio:hover:focus {
     box-shadow: none!important;
     -webkit-box-shadow: none!important;
+}
+
+/*** LAYOUT STYLES ***/
+
+.ucb-boostrap-layout-section .column .block:first-child {
+  margin-top: 1em;
 }
 
 .ucb-bootstrap-layout__background-color--gold {
