--- a/templates/block/block--inline-block--text-block.html.twig
+++ b/templates/block/block--inline-block--text-block.html.twig
@@ -24,7 +24,7 @@
 
 {% block content %}
 	<div{{attributes.addClass(classes)}}>
-		<div class="container">
+		<div>
 			{{ title_prefix }}
 			{% if label %}
 				<h2{{title_attributes}}>{{ label }}</h2>
