wip: generates featured articles, articles without thumbnails or images in both display styles ffor email preview

--- a/templates/content/node--newsletter.html.twig
+++ b/templates/content/node--newsletter.html.twig
@@ -114,7 +114,7 @@ view_mode ? 'node--view-mode-' ~ view_mode|clean_class,
 		  </tr>
 		  {% if content.field_newsletter_intro_body|render %}
 		  <tr>
-			<td align='left' style="padding:35px 30px 15px 60px">{{ content.field_newsletter_intro_body.0 }}</td>
+			<td align='left' style="padding:35px 30px 15px 60px;font-family:Roboto, Helvetica Neue, Helvetica, Arial, sans-serif;"">{{ content.field_newsletter_intro_body.0 }}</td>
 		  </tr>
 	  {% endif %}
 			</td>
