Finalized inline styles for email HTML copied to clipboard

--- a/templates/content/node--newsletter.html.twig
+++ b/templates/content/node--newsletter.html.twig
@@ -114,20 +114,20 @@ view_mode ? 'node--view-mode-' ~ view_mode|clean_class,
 		  </tr>
 		  {% if content.field_newsletter_intro_body|render %}
 		  <tr>
-			<td align='left' style="padding:35px 30px 15px 60px;font-family:Roboto, Helvetica Neue, Helvetica, Arial, sans-serif;"">{{ content.field_newsletter_intro_body.0 }}</td>
+			<td align='left' style="padding:35px 30px 15px 60px;font-family:Roboto, Helvetica Neue, Helvetica, Arial, sans-serif;">{{ content.field_newsletter_intro_body.0 }}</td>
 		  </tr>
 	  {% endif %}
 			</td>
 		</table>
-		
-		<div id="email-newsletter-article-section"></div>
 		<!-- Articles --> 
+
+		<div id="email-newsletter-article-section"></div>
  
 		<div id="email-newsletter-promo-one-section"></div>
 
 	  <!-- Blocks-->
 	  <div id="email-newsletter-blocks-section"></div>
-<!--Promo 2-->
+	  <!--Promo 2-->
 	  <div id="email-newsletter-promo-two-section"></div>
 
 	  </div>
